--- a/Ghost_With_Visuals.html
+++ b/Ghost_With_Visuals.html
@@ -783,7 +783,7 @@ else if (userInput.startsWith("say ")) {
 }
 
 // time
-else if (userInput.includes("what is the best time ")) {
+else if (userInput.startsWith("what is the best time ")) {
   var times = [
     "The best time to head out today is 12:30 PM",
     "The best time to head out today is 2:30 PM",
